App. version 7.0.0 -- Migrate to Spring Boot 4.0