@@ -1,18 +1,5 @@
 package com.poivredesiles.fundraising.service.impl;
 
-import java.text.Collator;
-import java.util.*;
-import java.util.stream.Collectors;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.MessageSource;
-import org.springframework.context.i18n.LocaleContextHolder;
-import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.poivredesiles.fundraising.exception.InvalidUsernameException;
 import com.poivredesiles.fundraising.exception.ResourceNotFoundException;
 import com.poivredesiles.fundraising.imports.dto.GroupLink;
@@ -33,6 +20,18 @@ import com.poivredesiles.fundraising.service.dto.PdiProductDTO;
 import com.poivredesiles.fundraising.service.dto.PdiSellerDTO;
 import com.poivredesiles.fundraising.service.mapper.PdiProductMapper;
 import com.poivredesiles.fundraising.service.mapper.PdiSellerMapper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.MessageSource;
+import org.springframework.context.i18n.LocaleContextHolder;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.text.Collator;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -206,7 +205,7 @@ public class PdiSellerServiceImpl implements PdiSellerService {
 			updateCampaignLeadership(pdiSeller);
 		} else {
 			log.error("No PdiGroup found(number={}) for seller #{}", groupLink.getGroupNumber(), pdiSeller.getNumber());
-			throw new ResourceNotFoundException(String.format("Aucun groupe (no=%d) trouvé pour le vendeur (no=%d)", groupLink.getGroupNumber(), pdiSeller.getNumber()));
+			throw new ResourceNotFoundException("Aucun groupe (no=%d) trouvé pour le vendeur (no=%d)".formatted(groupLink.getGroupNumber(), pdiSeller.getNumber()));
 		}
 	}
 
